fixed alignment issues for race submit button

--- a/frontend/src/components/raceSubmitButton.css
+++ b/frontend/src/components/raceSubmitButton.css
@@ -1,7 +1,9 @@
 /* CSS for Race Submit Button component */
+.raceSubmit-div{
+    text-align: center;
+}
 
 .raceSubmitButton {
-
     margin-bottom: 6em;
 
     font-size: 1.5em;    
